--- a/ funoverflow/funoverflow-useractivities/pom.xml
+++ b/ funoverflow/funoverflow-useractivities/pom.xml
@@ -1,10 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.funoverflowwebservices</groupId>
+    <artifactId>funoverflow</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <groupId>com.funoverflowwebservices.useractivities</groupId>
   <artifactId>funoverflow-useractivities</artifactId>
-  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
   <name>funoverflow-useractivities Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
