--- a/funoverflow/funoverflow-services/pom.xml
+++ b/funoverflow/funoverflow-services/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>com.funoverflowwebservices</groupId>
     <artifactId>funoverflow</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <groupId>com.funoverflowwebservices.services</groupId>
   <artifactId>funoverflow-services</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <packaging>war</packaging>
   <name>funoverflow-services Maven Webapp</name>
   <url>http://maven.apache.org</url>
