--- a/funoverflow/funoverflow-common/pom.xml
+++ b/funoverflow/funoverflow-common/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.funoverflowwebservices</groupId>
     <artifactId>funoverflow</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   
   <properties>
