--- a/funoverflow/funoverflow-common/pom.xml
+++ b/funoverflow/funoverflow-common/pom.xml
@@ -7,13 +7,26 @@
     <artifactId>funoverflow</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+  
+  <properties>
+		<releaseCandidate>1</releaseCandidate>
+		<spring.version>4.0.1.RELEASE</spring.version>
+		<jackson.mapper.version>1.9.13</jackson.mapper.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.javadoc.reporting.version>2.7</maven.javadoc.reporting.version>
+		<commons.logging.version>1.1.1</commons.logging.version>
+		<log4j.version>1.2.16</log4j.version>
+		<context.path>usn-webservice</context.path>
+	</properties>
+	
   <groupId>com.funoverflowwebservices.common</groupId>
   <artifactId>funoverflow-common</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>funoverflow-common</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
@@ -300,5 +313,7 @@
 			<artifactId>spring-integration-xmpp</artifactId>
 			<version>4.0.1.RELEASE</version>
 		</dependency> -->
-  </dependencies>
+		
+
+	</dependencies>
 </project>
