--- a/funoverflow/funoverflow-useractivities/pom.xml
+++ b/funoverflow/funoverflow-useractivities/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.funoverflowwebservices</groupId>
     <artifactId>funoverflow</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>com.funoverflowwebservices.useractivities</groupId>
   <artifactId>funoverflow-useractivities</artifactId>
