--- a/funoverflow/funoverflow-services/pom.xml
+++ b/funoverflow/funoverflow-services/pom.xml
@@ -20,6 +20,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+			<groupId>com.funoverflowwebservices.common</groupId>
+			 <artifactId>funoverflow-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>funoverflow-services</finalName>
