--- a/funoverflow/funoverflow-common/src/main/resources/properties/database.properties
+++ b/funoverflow/funoverflow-common/src/main/resources/properties/database.properties
@@ -1,6 +1,6 @@
 JDBC.DRIVER=com.mysql.jdbc.Driver
-JDBC.OAUTH.URL=jdbc:mysql://localhost:3306/buddyme.oauth?autoReconnect=true
+JDBC.OAUTH.URL=jdbc:mysql://54.85.174.64:3306/funoverflow?autoReconnect=true
 DB.USERNAME=dev
-DB.PASSWORD=developer
+DB.PASSWORD=root
 CONNECTION.POOL.INITAL.SIZE=5
 CONNECTION.POOL.MAX.SIZE=15
