--- a/funoverflow/funoverflow-common/src/main/resources/properties/database.properties
+++ b/funoverflow/funoverflow-common/src/main/resources/properties/database.properties
@@ -1,6 +1,7 @@
 JDBC.DRIVER=com.mysql.jdbc.Driver
-JDBC.OAUTH.URL=jdbc:mysql://54.85.174.64:3306/funoverflow?autoReconnect=true
-DB.USERNAME=dev
-DB.PASSWORD=root
+JDBC.OAUTH.URL=jdbc:mysql://ec2-54-85-174-64.compute-1.amazonaws.com:3306/funoverflow?autoReconnect=true
+
+DB.USERNAME=developer
+DB.PASSWORD=welcome1@
 CONNECTION.POOL.INITAL.SIZE=5
 CONNECTION.POOL.MAX.SIZE=15
